# Intellichem2MQTT

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.example.yaml  docker-compose.yaml  pyproject.toml  requirements.txt
.github/workflows/: docker-publish.yml
config/: config.example.yaml
docs/esp32/: DEVELOPMENT_SETUP.md  ESP32_PORT_ANALYSIS.md  WIRING_GUIDE.md
docs/plans/: 2025-12-28-esp32-port-design.md
esp32/: README.md  log.txt
esp32/intellichem_esp32/: .gitignore  CMakeLists.txt  partitions.csv  sdkconfig  sdkconfig.defaults
esp32/intellichem_esp32/main/: CMakeLists.txt  Kconfig.projbuild  main.c
esp32/intellichem_esp32/main/debug/: debug_http.c  debug_http.h  debug_log.c  debug_log.h
esp32/intellichem_esp32/main/models/: state.h
esp32/intellichem_esp32/main/mqtt/: discovery.c  discovery.h  mqtt_task.c  mqtt_task.h  publisher.c  publisher.h
esp32/intellichem_esp32/main/ota/: ota_http.c  ota_http.h
esp32/intellichem_esp32/main/protocol/: buffer.c  buffer.h  commands.c  commands.h  constants.h  message.c  message.h  parser.c  parser.h
esp32/intellichem_esp32/main/serial/: rs485.c  rs485.h  serial_task.c  serial_task.h
esp32/intellichem_esp32/main/wifi/: wifi_prov.c  wifi_prov.h
intellichem2mqtt/: __init__.py  __main__.py  app.py  config.py
intellichem2mqtt/models/: __init__.py  commands.py  intellichem.py
intellichem2mqtt/mqtt/: __init__.py  client.py  command_handler.py  discovery.py  publisher.py
intellichem2mqtt/protocol/: __init__.py  commands.py  constants.py  inbound.py  message.py  outbound.py
intellichem2mqtt/serial/: __init__.py  buffer.py  connection.py
intellichem2mqtt/utils/: logging.py
systemd/: intellichem2mqtt.service
tests/: __init__.py  test_models.py  test_protocol.py
