# Main component CMakeLists.txt

idf_component_register(
    SRCS
        "main.c"
        "protocol/message.c"
        "protocol/buffer.c"
        "protocol/parser.c"
        "protocol/commands.c"
        "serial/rs485.c"
        "serial/serial_task.c"
        "wifi/wifi_prov.c"
        "mqtt/mqtt_task.c"
        "mqtt/publisher.c"
        "mqtt/discovery.c"
    INCLUDE_DIRS
        "."
        "protocol"
        "models"
        "serial"
        "wifi"
        "mqtt"
    REQUIRES
        nvs_flash
        esp_wifi
        esp_event
        esp_netif
        esp_http_server
        driver
        mqtt
)
